--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-item">
+              <div class="features-icon-container">
+                <svg class="features-icon">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="features-tittle">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with
@@ -69,6 +74,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-container">
+                <svg class="features-icon">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="features-tittle">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price
@@ -76,6 +86,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-container">
+                <svg class="features-icon">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="features-tittle">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands that present the strongest digital
@@ -83,6 +98,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-container">
+                <svg class="features-icon">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="features-tittle">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
