--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <ul class="features-list">
             <li class="features-item">
               <div class="features-icon-container">
-                <svg class="features-icon">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
@@ -75,7 +75,7 @@
             </li>
             <li class="features-item">
               <div class="features-icon-container">
-                <svg class="features-icon">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
@@ -87,7 +87,7 @@
             </li>
             <li class="features-item">
               <div class="features-icon-container">
-                <svg class="features-icon">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
@@ -99,7 +99,7 @@
             </li>
             <li class="features-item">
               <div class="features-icon-container">
-                <svg class="features-icon">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
