--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             >Web<span class="logo-part">Studio</span></a
           >
           <ul class="nav-list">
-            <li><a class="nav-link" href="./index.html">Studio</a></li>
+            <li><a class="nav-link current" href="./index.html">Studio</a></li>
             <li><a class="nav-link" href="">Portfolio</a></li>
             <li><a class="nav-link" href="">Contacts</a></li>
           </ul>
@@ -128,6 +128,38 @@
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-position">Product Designer</p>
               </div>
+              <div class="social-icons-container team-icons-container">
+                <ul class="social-icons-list">
+                  <li class="social-icons-item">
+                    <a href="#instagram" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a href="" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a href="" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a href="" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-element">
               <img
@@ -140,6 +172,39 @@
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-position">Frontend Developer</p>
               </div>
+                            <div class="social-icons-container team-icons-container">
+                <ul class="social-icons-list">
+                  <li class="social-icons-item">
+                    <a href="#instagram" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a href="" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a href="" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a href="" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
             </li>
             <li class="team-element">
               <img
@@ -152,6 +217,39 @@
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-position">Marketing</p>
               </div>
+                            <div class="social-icons-container team-icons-container">
+                <ul class="social-icons-list">
+                  <li class="social-icons-item">
+                    <a href="#instagram" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a href="" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a href="" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a href="" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
             </li>
             <li class="team-element">
               <img
@@ -164,6 +262,39 @@
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-position">UI Designer</p>
               </div>
+                            <div class="social-icons-container team-icons-container">
+                <ul class="social-icons-list">
+                  <li class="social-icons-item">
+                    <a href="#instagram" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a href="" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a href="" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icons-item">
+                    <a href="" class="social-icons-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
             </li>
           </ul>
         </div>
@@ -174,72 +305,90 @@
           <h2 class="portolio-tittle">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-images/banking-app.jpg"
-                alt="banking app preview"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  src="./images/portfolio-images/banking-app.jpg"
+                  alt="banking app preview"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-descr-container">
                 <h3 class="portfolio-product">Banking App</h3>
                 <p class="product-type">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-images/cashless-payment.jpg"
-                alt="cashless payment preview"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <img
+                  src="./images/portfolio-images/cashless-payment.jpg"
+                  alt="cashless payment preview"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="portfolio-descr-container">
                 <h3 class="portfolio-product">Cashless Payment</h3>
                 <p class="product-type">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-images/meditation-app.jpg"
-                alt="miditation app preview"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <img
+                  src="./images/portfolio-images/meditation-app.jpg"
+                  alt="miditation app preview"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="portfolio-descr-container">
                 <h3 class="portfolio-product">Meditation App</h3>
                 <p class="product-type">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-images/taxi-service.jpg"
-                alt="taxi service preview"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <img
+                  src="./images/portfolio-images/taxi-service.jpg"
+                  alt="taxi service preview"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="portfolio-descr-container">
                 <h3 class="portfolio-product">Taxi Service</h3>
                 <p class="product-type">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-images/screen-illustrations.jpg"
-                alt="screen illustrations preview"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <img
+                  src="./images/portfolio-images/screen-illustrations.jpg"
+                  alt="screen illustrations preview"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="portfolio-descr-container">
                 <h3 class="portfolio-product">Screen Illustrations</h3>
                 <p class="product-type">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-images/online-courses.jpg"
-                alt="online courses preview"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <img
+                  src="./images/portfolio-images/online-courses.jpg"
+                  alt="online courses preview"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="portfolio-descr-container">
                 <h3 class="portfolio-product">Online Courses</h3>
                 <p class="product-type">Marketing</p>
@@ -251,14 +400,49 @@
     </main>
     <footer class="page-footer">
       <div class="container footer-container">
-        <a href="./index.html" class="logo footer-logo"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+          <div class="footer-logoandtext">
+            <a href="./index.html" class="logo footer-logo"
+              >Web<span class="logo-part">Studio</span></a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="social-icons-container footer-icons-container">
+            <p class="footer-social-text">Social Media</p>
+                  <ul class="social-icons-list">
+                    <li class="social-icons-item">
+                      <a href="#instagram" class="social-icons-link">
+                        <svg class="social-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons-item">
+                      <a href="" class="social-icons-link">
+                        <svg class="social-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons-item">
+                      <a href="" class="social-icons-link">
+                        <svg class="social-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-icons-item">
+                      <a href="" class="social-icons-link">
+                        <svg class="social-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+        </div>
     </footer>
   </body>
 </html>
