--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-position">Frontend Developer</p>
               </div>
-                            <div class="social-icons-container team-icons-container">
+              <div class="social-icons-container team-icons-container">
                 <ul class="social-icons-list">
                   <li class="social-icons-item">
                     <a href="#instagram" class="social-icons-link">
@@ -204,7 +204,6 @@
                   </li>
                 </ul>
               </div>
-            </li>
             </li>
             <li class="team-element">
               <img
@@ -217,7 +216,7 @@
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-position">Marketing</p>
               </div>
-                            <div class="social-icons-container team-icons-container">
+              <div class="social-icons-container team-icons-container">
                 <ul class="social-icons-list">
                   <li class="social-icons-item">
                     <a href="#instagram" class="social-icons-link">
@@ -249,7 +248,6 @@
                   </li>
                 </ul>
               </div>
-            </li>
             </li>
             <li class="team-element">
               <img
@@ -262,7 +260,7 @@
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-position">UI Designer</p>
               </div>
-                            <div class="social-icons-container team-icons-container">
+              <div class="social-icons-container team-icons-container">
                 <ul class="social-icons-list">
                   <li class="social-icons-item">
                     <a href="#instagram" class="social-icons-link">
@@ -294,7 +292,6 @@
                   </li>
                 </ul>
               </div>
-            </li>
             </li>
           </ul>
         </div>
@@ -312,7 +309,11 @@
                   width="360"
                   height="300"
                 />
-                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-descr-container">
                 <h3 class="portfolio-product">Banking App</h3>
@@ -321,7 +322,11 @@
             </li>
             <li class="portfolio-item">
               <div class="overlay">
-                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
                 <img
                   src="./images/portfolio-images/cashless-payment.jpg"
                   alt="cashless payment preview"
@@ -336,7 +341,11 @@
             </li>
             <li class="portfolio-item">
               <div class="overlay">
-                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
                 <img
                   src="./images/portfolio-images/meditation-app.jpg"
                   alt="miditation app preview"
@@ -351,7 +360,11 @@
             </li>
             <li class="portfolio-item">
               <div class="overlay">
-                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
                 <img
                   src="./images/portfolio-images/taxi-service.jpg"
                   alt="taxi service preview"
@@ -366,7 +379,11 @@
             </li>
             <li class="portfolio-item">
               <div class="overlay">
-                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
                 <img
                   src="./images/portfolio-images/screen-illustrations.jpg"
                   alt="screen illustrations preview"
@@ -381,7 +398,11 @@
             </li>
             <li class="portfolio-item">
               <div class="overlay">
-                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
                 <img
                   src="./images/portfolio-images/online-courses.jpg"
                   alt="online courses preview"
@@ -400,49 +421,49 @@
     </main>
     <footer class="page-footer">
       <div class="container footer-container">
-          <div class="footer-logoandtext">
-            <a href="./index.html" class="logo footer-logo"
-              >Web<span class="logo-part">Studio</span></a
-            >
-            <p class="footer-text">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </div>
-          <div class="social-icons-container footer-icons-container">
-            <p class="footer-social-text">Social Media</p>
-                  <ul class="social-icons-list">
-                    <li class="social-icons-item">
-                      <a href="#instagram" class="social-icons-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-icons-item">
-                      <a href="" class="social-icons-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-icons-item">
-                      <a href="" class="social-icons-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-icons-item">
-                      <a href="" class="social-icons-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+        <div class="footer-logoandtext">
+          <a href="./index.html" class="logo footer-logo"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
         </div>
+        <div class="social-icons-container footer-icons-container">
+          <p class="footer-social-text">Social media</p>
+          <ul class="social-icons-list">
+            <li class="social-icons-item">
+              <a href="#instagram" class="social-icons-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a href="" class="social-icons-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a href="" class="social-icons-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-icons-item">
+              <a href="" class="social-icons-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
