--- a/index.html
+++ b/index.html
@@ -424,30 +424,30 @@
         </div>
         <div class="social-icons-container footer-icons-container">
           <p class="footer-social-text">Social media</p>
-          <ul class="social-icons-list">
+          <ul class="social-icons-list footer-icons-list">
             <li class="social-icons-item">
-              <a href="#instagram" class="social-icons-link">
+              <a href="#instagram" class="social-icons-link footer-icon-link">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-icons-item">
-              <a href="" class="social-icons-link">
+              <a href="" class="social-icons-link footer-icon-link">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-icons-item">
-              <a href="" class="social-icons-link">
+              <a href="" class="social-icons-link footer-icon-link">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-icons-item">
-              <a href="" class="social-icons-link">
+              <a href="" class="social-icons-link footer-icon-link">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
