--- a/index.html
+++ b/index.html
@@ -294,18 +294,18 @@
           <h2 class="portolio-tittle">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <div class="overlay">
+              <div class="image-container">
+                <p class="over-image-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
                 <img
                   src="./images/portfolio-images/banking-app.jpg"
                   alt="banking app preview"
                   width="360"
                   height="300"
                 />
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
               </div>
               <div class="portfolio-descr-container">
                 <h3 class="portfolio-product">Banking App</h3>
@@ -313,8 +313,8 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="overlay">
-                <p class="overlay-text">
+              <div class="image-container">
+                <p class="over-image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -332,8 +332,8 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="overlay">
-                <p class="overlay-text">
+              <div class="image-container">
+                <p class="over-image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -351,8 +351,8 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="overlay">
-                <p class="overlay-text">
+              <div class="image-container">
+                <p class="over-image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -370,8 +370,8 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="overlay">
-                <p class="overlay-text">
+              <div class="image-container">
+                <p class="over-image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -389,8 +389,8 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="overlay">
-                <p class="overlay-text">
+              <div class="image-container">
+                <p class="over-image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
